--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
   <artifactId>maven-web-app</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
+  
 
   <name>maven-web-app Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
@@ -27,20 +28,32 @@
 	    <groupId>javax.servlet</groupId>
 	    <artifactId>servlet-api</artifactId>
 	    <version>2.5</version>
+	    <scope>provided</scope>
 	    
 	</dependency>
+	<dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jsp-api</artifactId>
+            <version>2.0</version>
+            <scope>provided</scope>
+        </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    
   </dependencies>
-
+   
   <build>
+    
     <finalName>maven-web-app</finalName>
+    
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
+     
       <plugins>
+       
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
           <version>3.1.0</version>
@@ -70,6 +83,16 @@
           <artifactId>maven-deploy-plugin</artifactId>
           <version>2.8.2</version>
         </plugin>
+       <plugin>
+		<groupId>org.apache.tomcat.maven</groupId>
+		<artifactId>tomcat7-maven-plugin</artifactId>
+		<version>2.2</version>
+		<configuration>
+			<url>http://localhost:8080/manager/text</url>
+			<server>TomcatServer</server>
+			<path>/maven-web-app</path>
+		</configuration>
+	</plugin>
       </plugins>
     </pluginManagement>
   </build>
