--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,25 @@
 			<port>8080</port>
 		</configuration>
 	</plugin>
+	      
+	      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <configuration>
+            <mainClass>com.places.Main</mainClass>
+        </configuration>
+
+        <executions>
+            <execution>
+                <goals>
+                    <goal>repackage</goal>
+                </goals>
+            </execution>
+       </executions>
+
+</plugin>
+	      
+	      
       </plugins>
     </pluginManagement>
   </build>
